临时处理  openapi2.0 升级带来的各种问题
