# src/Definition/Share/Models/RestApiInfo.cs
@@ -1,4 +1,3 @@
-using Microsoft.OpenApi.Models;
 namespace Share.Models;
 
 /// <summary>
@@ -9,17 +8,20 @@ public class RestApiInfo
     /// <summary>
     /// 请求方式
     /// </summary>
-    public OperationType OperationType { get; set; }
+    public HttpMethod? HttpMethod { get; set; }
+
     /// <summary>
     /// 路由
     /// </summary>
     public required string Router { get; set; }
+
     /// <summary>
     /// 说明
     /// </summary>
     public string? Summary { get; set; }
     public string? Tag { get; set; }
     public required string OperationId { get; set; }
+
     /// <summary>
     /// 请求查询参数
     /// </summary>
@@ -29,6 +31,7 @@ public class RestApiInfo
     /// 请求类型参数
     /// </summary>
     public TypeMeta? RequestInfo { get; set; }
+
     /// <summary>
     /// 返回类型内容
     /// </summary>
